# odata-pyq

./: README.md  filter.py  odata_parser.py  path.py  peewee_metadata.py  peewee_qodata.py  pyproject.toml  requirements_test.txt  sitemap.xml  test_filter_parsing.py  test_odata_parser.py
.github/workflows/: python-app.yml
src/odata/: filter.py  odata_parser.py  orderby.py  path.py  peewee_qodata.py
tests/: conftest_py.py  test_filter_parsing.py  test_odata_parser.py
