[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project_name"
version = "0.1.0"
authors = [
  { name="Leonid Martynov", email="lmartynov@tuta.com" },
]
description = "A short description of my project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # list your production dependencies here
    "pytest-cov",
    "pytest",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]